<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_user"/>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_orders"
            android:title="@string/nav_my_orders"
            android:icon="@drawable/ic_mis_ventas"/>

        <item
            android:id="@+id/nav_payments"
            android:title="@string/nav_payments"
            android:icon="@drawable/ic_cuentas"/>

        <item
            android:id="@+id/nav_addresses"
            android:title="@string/nav_my_addresses"
            android:icon="@drawable/ic_mis_direcciones"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"/>

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help"
            android:icon="@drawable/ic_information"/>

    </group>

</menu>